# choretracker

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.gha  Makefile  plan.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: vcpkg-build-debug.yaml  vcpkg-build.yaml
cmake/: FindDPP.cmake  FindSpdlog.cmake
include/choretracker/: alerter.h  bot.h  config.h  db.h  discord_oauth.h  utils.hpp  web.h
src/: alerter.cpp  bot.cpp  config.cpp  db.cpp  discord_oauth.cpp  main.cpp  web.cpp
triplets/: x64-linux-release.cmake  x64-linux.cmake
web/: index.html
